fixed user slug page so they are visible. Changed styling to have the form box container like all other pages. Need to finish the bookmarks function and add to this page

--- a/public/stylesheet/stylesheet.css
+++ b/public/stylesheet/stylesheet.css
@@ -13,7 +13,6 @@ body {
 
 .container.form {
     padding: 25px;
-    position: fixed;
 }
 
 #login {
